# dotenv-linter

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  cliff.toml  deny.toml  dprint.json  install.sh  release.sh  rustfmt.toml
.cargo/: config  config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/workflows/: audit.yml  aur.yml  benchmark.yml  cargo-deny.yml  ci.yml  linters.yml  misspell.yml  release-docker-arm.yml  release.yml  rust.yml  shellcheck.yml  stale.yml  yamllint.yml
.manifest/scoop/: dotenv-linter.json
benches/: check.rs  compare.rs  fix.rs
benches/fixtures/: simple_compare_base.env  simple_compare_other.env
docs/: README.md  _coverpage.md  _sidebar.md  contributing.md  index.html  install.md  introduction.md  quick_start.md  sponsors.md
docs/checks/: about.md  duplicated_key.md  ending_blank_line.md  extra_blank_line.md  (+9 more)
dotenv/: Cargo.toml
dotenv-analyzer/: Cargo.toml  README.md
dotenv-analyzer/src/: comment.rs  lib.rs  lint_kind.rs  warning.rs
dotenv-analyzer/src/check/: duplicated_key.rs  ending_blank_line.rs  extra_blank_line.rs  incorrect_delimiter.rs  key_without_value.rs  leading_character.rs  lowercase_key.rs  mod.rs  quote_character.rs  schema_violation.rs  space_character.rs  substitution_key.rs  trailing_whitespace.rs  unordered_key.rs  value_without_quotes.rs
dotenv-analyzer/src/fix/: duplicated_key.rs  ending_blank_line.rs  extra_blank_line.rs  incorrect_delimiter.rs  key_without_value.rs  leading_character.rs  lowercase_key.rs  mod.rs  quote_character.rs  space_character.rs  substitution_key.rs  trailing_whitespace.rs  unordered_key.rs  value_without_quotes.rs
dotenv-cli/: Cargo.toml
dotenv-cli/benches/: check.rs  compare.rs  diff.rs  fix.rs
dotenv-cli/src/: cli.rs  compare.rs  diff.rs  lib.rs  main.rs  options.rs
dotenv-cli/src/output/: check.rs  diff.rs  mod.rs
dotenv-cli/tests/: cli.rs
dotenv-cli/tests/args/: current_dir.rs  specific_path.rs
dotenv-cli/tests/checks/: duplicated_key.rs  ending_blank_line.rs  extra_blank_line.rs  incorrect_delimiter.rs  key_without_value.rs  leading_character.rs  lowercase_key.rs  quote_character.rs  schema.rs  space_character.rs  substitution_key.rs  trailing_whitespace.rs  unordered_key.rs  value_without_quotes.rs
dotenv-cli/tests/common/: args.rs  test_dir.rs  test_file.rs
dotenv-cli/tests/diff/: mod.rs
dotenv-cli/tests/fixes/: mod.rs  space_character.rs
dotenv-cli/tests/flags/: backup.rs  check_updates.rs  quiet.rs  recursive.rs
dotenv-cli/tests/options/: exclude.rs
dotenv-cli/tests/output/: check.rs  diff.rs  fix.rs  mod.rs
dotenv-core/: Cargo.toml  README.md
dotenv-core/src/: lib.rs
dotenv-finder/: Cargo.toml  README.md
dotenv-finder/src/: file.rs  fs_utils.rs  lib.rs  line.rs  quote.rs  quote_type.rs
dotenv-linter/: Cargo.toml
dotenv-linter/benches/: check.rs  compare.rs  fix.rs
dotenv-linter/benches/fixtures/: compare.env  simple.env
dotenv-linter/src/: checks.rs  cli.rs  common.rs  fixes.rs  fs_utils.rs  lib.rs  main.rs  schema.rs
dotenv-linter/src/checks/: duplicated_key.rs  ending_blank_line.rs  extra_blank_line.rs  incorrect_delimiter.rs  key_without_value.rs  leading_character.rs  lowercase_key.rs  quote_character.rs  schema_validator.rs  schema_violation.rs  space_character.rs  substitution_key.rs  trailing_whitespace.rs  unordered_key.rs  value_without_quotes.rs
dotenv-linter/src/cli/: mod.rs  options.rs
dotenv-linter/src/common/: comment.rs  compare.rs  lint_kind.rs  warning.rs
dotenv-linter/src/common/output/: check.rs  compare.rs  fix.rs
dotenv-linter/src/fixes/: duplicated_key.rs  ending_blank_line.rs  extra_blank_line.rs  incorrect_delimiter.rs  key_without_value.rs  leading_character.rs  lowercase_key.rs  quote_character.rs  space_character.rs  substitution_key.rs  trailing_whitespace.rs  unordered_key.rs  value_without_quotes.rs
dotenv-linter/src/output/: compare.rs  fix.rs
dotenv-linter/tests/args/: specific_path.rs
dotenv-linter/tests/checks/: duplicated_key.rs  incorrect_delimiter.rs  mod.rs  quote_character.rs  schema.rs  value_without_quotes.rs
dotenv-linter/tests/common/: output.rs  test_dir.rs  test_file.rs  test_link.rs
dotenv-linter/tests/compare/: compare.rs  mod.rs
dotenv-linter/tests/fixes/: ending_blank_line.rs  extra_blank_line.rs  incorrect_delimiter.rs  key_without_value.rs  leading_character.rs  mod.rs  quote_character.rs  unordered_key.rs
dotenv-linter/tests/fixes/fixtures/: correct.env.golden
dotenv-linter/tests/flags/: backup.rs  check_updates.rs  mod.rs  recursive.rs  stdin.rs  version.rs
dotenv-linter/tests/options/: exclude.rs  ignore_file.rs  mod.rs
dotenv-linter/tests/output/: check.rs  fix.rs
dotenv-lookup/: Cargo.toml
dotenv-lookup/src/: file.rs  fs_utils.rs  lib.rs  line.rs  quote_type.rs
dotenv-schema/: Cargo.toml  README.md
dotenv-schema/src/: clap.rs  lib.rs
linter/: Cargo.toml
linter/src/: _cli.rs  _main.rs  checks.rs  cli.rs  common.rs  fs_utils.rs  lib.rs  main.rs
linter/src/checks/: extra_blank_line.rs  leading_character.rs  lowercase_key.rs  substitution_key.rs  trailing_whitespace.rs  unordered_key.rs
linter/src/command/: check.rs  compare.rs  fix.rs  list.rs  mod.rs
linter/src/common/: comment.rs  compare.rs
linter/src/common/output/: check.rs  compare.rs  mod.rs
linter/src/fixes/: extra_blank_line.rs  key_without_value.rs  leading_character.rs  lowercase_key.rs  substitution_key.rs  unordered_key.rs
linter/tests/checks/: key_without_value.rs  lowercase_key.rs  mod.rs  substitution_key.rs
linter/tests/flags/: check_updates.rs
linter/tests/output/: fix.rs
src/: checks.rs  cli.rs  comment.rs  common.rs  dotenv.rs  file_writer.rs  fixes.rs  fs_utils.rs  get_lines.rs  lib.rs  lint_kind.rs  lints.rs  main.rs  schema.rs
test/: .env-456
tests/: autofix.rs  cli.rs  cli_basic.rs  cli_common.rs  cli_exclude.rs  cli_specific.rs  cli_test.rs  common.rs  ending_blank_line.rs  extra_blank_line.rs
(+117 files in other folders)
