[workspace]
members = ["dotenv-finder", "dotenv-linter"]
resolver = "2"

[workspace.package]
authors = [
    "Mikhail Grachev <work@mgrachev.com>",
    "dotenv-linter core team & contributors",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/dotenv-linter/dotenv-linter"

[workspace.dependencies]
assert_cmd = "2.0"
dunce = "1.0"
tempfile = "3.20"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'
