[workspace]
members = [
    "dotenv-analyzer",
    "dotenv-cli",
    "dotenv-core",
    "dotenv-finder",
    "dotenv-schema",
]
resolver = "2"

[workspace.package]
authors = [
    "Mikhail Grachev <work@mgrachev.com>",
    "dotenv-linter core team & contributors",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/dotenv-linter/dotenv-linter"

[workspace.dependencies]
assert_cmd = "2.0"
clap = { version = "4.5", features = ["cargo", "env", "derive"] }
dunce = "1.0"
tempfile = "3.23"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'
