[package]
name = "dotenv-analyzer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
include = ["/src"]
license.workspace = true
repository.workspace = true
description = "A crate to check and fix .env files"

[dependencies]
dotenv-core = { version = "0.1", path = "../dotenv-core" }
dotenv-schema = { version = "0.1", path = "../dotenv-schema" }

[dependencies.clap]
version = "4.5"
optional = true

[dev-dependencies]
regex = "1.11"
serde_json = "1.0"
