[package]
name = "dotenv-analyzer"
version = "0.1.0"
authors.workspace = true
documentation = "https://docs.rs/dotenv-analyzer"
edition.workspace = true
homepage = "https://github.com/dotenv-linter/dotenv-linter"
include = ["/src", "../README.md"]
keywords = ["dotenv", "environment", "env", "analyzer"]
license.workspace = true
readme = "../README.md"
repository.workspace = true
description = "A crate to check and fix .env files"

[dependencies]
dotenv-core = { version = "0.1", path = "../dotenv-core" }
dotenv-schema = { version = "0.1", path = "../dotenv-schema" }

[dependencies.clap]
workspace = true
optional = true

[dev-dependencies]
regex = "1.11"
serde_json = "1.0"
