[package]
name = "dotenv-linter"
version = "3.3.0" # managed by release.sh
authors.workspace = true
categories = ["command-line-utilities"]
edition.workspace = true
homepage = "https://dotenv-linter.github.io"
include = ["/src", "/benches", "../README.md"]
keywords = ["cli", "dotenv", "environment", "env", "linter"]
license.workspace = true
readme = "../README.md"
repository.workspace = true
description = "Lightning-fast linter for .env files"

[target.'cfg(windows)'.dev-dependencies]
dunce.workspace = true

[lib]
bench = false

[[bin]]
name = "dotenv-linter"
path = "src/main.rs"
bench = false

[features]
default = ["update-informer"]
stub_check_version = []

[dependencies]
clap.workspace = true
colored = "3.0"
dotenv-analyzer = { version = "0.1", path = "../dotenv-analyzer", features = ["clap"] }
dotenv-core = { version = "0.1", path = "../dotenv-core" }
dotenv-finder = { version = "0.1", path = "../dotenv-finder" }
dotenv-schema = { version = "0.1", path = "../dotenv-schema", features = ["clap"] }

[dependencies.update-informer]
version = "1.3"
optional = true

[dev-dependencies]
assert_cmd.workspace = true
criterion = "0.7"
tempfile.workspace = true

[target.'cfg(not(windows))'.dev-dependencies]
gag = "1.0"

[[bench]]
name = "check"
harness = false

[[bench]]
name = "fix"
harness = false

[[bench]]
name = "diff"
harness = false
