[package]
name = "dotenv-finder"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
include = ["/src"]
license.workspace = true
repository.workspace = true
description = "A crate to find and parse .env files"

[dependencies]
dotenv-core = { version = "0.1", path = "../dotenv-core" }

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
dunce.workspace = true
