[package]
name = "dotenv-linter"
version = "3.3.0" # managed by release.sh
authors.workspace = true
categories = ["command-line-utilities"]
edition.workspace = true
homepage = "https://dotenv-linter.github.io"
include = ["/src", "/benches", "../README.md"]
keywords = ["cli", "dotenv", "environment", "env", "linter"]
license.workspace = true
readme = "../README.md"
repository.workspace = true
description = "Lightning-fast linter for .env files"

[features]
default = ["update-informer"]
stub_check_version = []

[dependencies]
clap = { version = "4.5", features = ["cargo", "env"] }
colored = "3.0"
dotenv-lookup = { version = "1.0", path = "../dotenv-lookup" }
email_address = "0.2"
glob = "0.3.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
serde_with = "3.14"
url = "2.5"

[dependencies.update-informer]
version = "1.3"
optional = true

[dev-dependencies]
assert_cmd.workspace = true
criterion = "0.7"
tempfile.workspace = true

[target.'cfg(windows)'.dev-dependencies]
dunce.workspace = true

[target.'cfg(not(windows))'.dev-dependencies]
gag = "1.0"

[[bin]]
name = "dotenv-linter"
path = "src/main.rs"
bench = false

[lib]
bench = false

[[bench]]
name = "check"
harness = false

[[bench]]
name = "fix"
harness = false

[[bench]]
name = "compare"
harness = false
