[package]
name = "dotenv-lookup"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
include = ["/src"]
license.workspace = true
repository.workspace = true
description = "A crate to find and parse .env files"

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
dunce.workspace = true

[dependencies]
glob = "0.3.3"
